--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			
 			<section id="cards-container"></section>
 		  </main>
-		  <script type="text/javascript" src="js/main.js"></script>
+		  <script type="module" src="js/main.js"></script>
 	</body>
 	  
 </html>
